# recipe-mind

./: .gitignore
apps/client/angular/: .gitignore  angular.json  package-lock.json  package.json  tsconfig.json
apps/client/angular/src/: styles.css
apps/client/angular/src/app/: app.config.ts  app.routes.server.ts  app.routes.ts  app.ts
apps/client/angular/src/app/core/auth/: auth.guard.ts  auth.service.ts  logged-in.guard.spec.ts  logged-in.guard.ts
apps/client/angular/src/app/core/interceptors/: api-auth-interceptor.spec.ts  api-auth-interceptor.ts
apps/client/angular/src/app/core/layout/auth-layout/: auth-layout.component.html  auth-layout.component.ts
apps/client/angular/src/app/core/layout/workspace-layout/: workspace-layout.component.html  workspace-layout.component.spec.ts  workspace-layout.component.ts
apps/client/angular/src/app/features/auth/login/: login.component.html  login.component.ts
apps/server/: .env.example  pyproject.toml  run.sh  supabase_initial_schema.sql
apps/server/alembic/: env.py
apps/server/alembic/versions/: 0bfd40fe481c_baseline_supabase_schema.py
apps/server/src/: main.py
apps/server/src/core/: config.py
apps/server/src/database/: db.py
apps/server/src/dependencies/: _auth.py  auth.py  db.py  services.py
apps/server/src/models/: diet.py  ingredient.py  ingredient_category.py  recipe.py
apps/server/src/routers/: recipe_management.py  recipe_search.py  users.py
apps/server/src/schemas/: app_services.py  health_check.py  settings.py
apps/server/src/services/: recipe_parser.py
(+31 files in other folders)
