[project]
name = "server"
version = "0.1.0"
description = "Recipe Mind backend API with Supabase and RAG-powered search"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "ruff>=0.15.13",
    "supabase>=2.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "openai>=1.3.0",
    "recipe-scrapers>=15.11.0",
    "sqlmodel>=0.0.38",
    "alembic>=1.18.4",
    "sqlalchemy>=2.0.49",
    "pgvector>=0.4.2",
    "asyncpg>=0.31.0",
]
